# AndroidDemo

./: .gitignore  README.md  readme.txt
AndroidNativeHook/: settings.gradle
AndroidNativeHook/app/: build.gradle
AndroidNativeHook/app/src/main/: AndroidManifest.xml
AndroidNativeHook/app/src/main/cpp/: CMakeLists.txt  hook_simple.c  hook_simple.h  logger.h  native_hook.c  native_hook.h  native_write.c  native_write.h  xhook_write.c  xhook_write.h
AndroidNativeHook/gradle/wrapper/: gradle-wrapper.properties
AndroidNativeHook/xhook/: build.gradle
AndroidNativeHook/xhook/src/main/: AndroidManifest.xml
AndroidNativeHook/xhook/src/main/cpp/: CMakeLists.txt
AspectJLimitClickDemo/: .gitignore  settings.gradle
AspectJLimitClickDemo/app/: build.gradle
FirebaseDemo/: build.gradle
FirebaseDemo/app/: build.gradle  google-services.json
FirebaseDemo/app/src/main/: AndroidManifest.xml
FirebaseDemo/gradle/wrapper/: gradle-wrapper.properties
GoogleAdDemo/: settings.gradle
GoogleAdDemo/app/: build.gradle
GoogleAdDemo/app/src/main/: AndroidManifest.xml
GoogleAdDemo/gradle/wrapper/: gradle-wrapper.properties
LeakCanaryDemo/: settings.gradle
LeakCanaryDemo/app/: build.gradle
LeakCanaryDemo/app/src/main/: AndroidManifest.xml
LeakCanaryDemo/gradle/wrapper/: gradle-wrapper.properties
PoetDemo/: README.md  gradle.properties  settings.gradle  settings.gradle.kts
PoetDemo/annotation/: build.gradle
PoetDemo/app/: build.gradle
PoetDemo/app/src/main/: AndroidManifest.xml
PoetDemo/gradle/wrapper/: gradle-wrapper.properties
PoetDemo/javapoet/: build.gradle
PoetDemo/kotlinpoet/: build.gradle
PoetDemo/kotlinpoet/src/main/: AndroidManifest.xml
PoetDemo/kotlinpoet/src/main/java/: HelloWorld.kt
PoetDemo/kspcomplier/: build.gradle.kts
PoetDemo/kspconsumer/: build.gradle.kts
StateDialogDemo/app/: build.gradle
StateDialogDemo/app/src/main/: AndroidManifest.xml
StateDialogDemo/gradle/wrapper/: gradle-wrapper.properties
androidDailyDemo/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
androidDailyDemo/app/: build.gradle  kotlin_config.gradle  proguard-rules.pro
androidDailyDemo/app/src/main/: AndroidManifest.xml
androidDailyDemo/gradle/wrapper/: gradle-wrapper.properties
aop/AspectJLimitClickDemo/: README.md
aop/AspectJLimitClickDemo/app/src/main/: AndroidManifest.xml
aop/AspectJLimitClickDemo/clicklimit/: build.gradle
aop/aspectdemo/: build.gradle  settings.gradle
aop/aspectdemo/app/: build.gradle
aop/aspectdemo/app/src/main/: AndroidManifest.xml
aop/aspectdemo/gintoinc/: build.gradle
aop/aspectdemo/gintoinc/src/main/: AndroidManifest.xml
aop/aspectdemo/gradle/wrapper/: gradle-wrapper.properties
binderDemo/app/: build.gradle
binderDemo/app/src/main/: AndroidManifest.xml
binderDemo/gradle/wrapper/: gradle-wrapper.properties
javapoetdemo/: README.md  checkstyle.xml  gradle.properties  settings.gradle
javapoetdemo/app/: build.gradle
javapoetdemo/app/src/main/: AndroidManifest.xml
javapoetdemo/gradle/wrapper/: gradle-wrapper.properties
javapoetdemo/javapoetlib/: build.gradle
transformdemo/: build.gradle
transformdemo/app/: build.gradle
transformdemo/app/src/main/: AndroidManifest.xml
transformdemo/gradle/wrapper/: gradle-wrapper.properties
transformdemo/plugin/: build.gradle
transformdemo/repo/com/yxhuang/autotrack.android/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
(+215 files in other folders)
